--- a/FriedRiceShooter/FriedRiceShooter - ArtificialInteligence.csproj
+++ b/FriedRiceShooter/FriedRiceShooter - ArtificialInteligence.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Quim.cs" />
+    <Compile Include="AI.cs" />
     <Compile Include="Ship.cs" />
     <Compile Include="Sprite.cs" />
   </ItemGroup>
