Re-adding physics stuff Major placed here

--- a/FriedRiceShooter/FriedRiceShooter - ArtificialInteligence.csproj
+++ b/FriedRiceShooter/FriedRiceShooter - ArtificialInteligence.csproj
@@ -41,6 +41,8 @@
     <Compile Include="AiC.cs" />
     <Compile Include="Bullet.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="PhysicsBody.cs" />
+    <Compile Include="PhysicsWorld.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
